--- a/compose.yml
+++ b/compose.yml
@@ -3,7 +3,7 @@ services:
     image: dockurr/windows
     container_name: windows
     environment:
-      VERSION: "11"
+      VERSION: "10e"
     devices:
       - /dev/kvm
       - /dev/net/tun
@@ -15,5 +15,4 @@ services:
       - 3389:3389/udp
     volumes:
       - ./windows:/storage
-    restart: always
-    stop_grace_period: 2m
+    stop_grace_period: 9m
